# CustomMoodleUXClientReact

./: .gitignore  LICENSE  README.md  claude_context.md  course.json  courses.json  docker-compose.yml  implementation_plan.md  output.txt  package-lock.json  package.json  privacy.html  prompts.md  server_init.sql  utn_logo.af  vite.config.js  vite.config.ts
.agent/rules/: INSTRUCTIONS.MD
.plans/: 2026-03-29-ingestion-pipeline.md
NextGen Moodle Client/NextGen Moodle Client.xcodeproj/: project.pbxproj
NextGen Moodle Client/Shared (App)/: ViewController.swift
NextGen Moodle Client/Shared (Extension)/: SafariWebExtensionHandler.swift
NextGen Moodle Client/iOS (App)/: AppDelegate.swift  SceneDelegate.swift
NextGen Moodle Client/macOS (App)/: AppDelegate.swift
handoff-mcp-server/: index.js  package.json
pion-handoff-generator/: package.json
pion-handoff-generator/templates/: package.json  server.js
pion-handoff-generator/test-app/: mcp.js  package.json  server.js  setup_rustfs.sh  storage.js
pion-handoff-rust/: Cargo.toml
pion-handoff-rust/src/: db.rs  main.rs  sync.rs
public/: google-slides-extractor.js  manifest.json  rules.json
rust-worker/: Cargo.toml  Dockerfile
rust-worker/src/: main.rs
src/: App.css  App.jsx  App.tsx  App.txt  App2.txt  App3.txt  index.css  main.jsx  main.tsx
src/api/: handoffProxy.js  moodle.js  zoomProcessor.js
src/components/: BookReader.css  BookReader.jsx  ClassView.jsx  DashboardView.jsx  DownloadTracker.jsx  VideoPlayer.jsx  ui.jsx
src/db/: index.js  opfs.js  pgliteIngest.js  pgliteSync.js  queries.js  (+3 more)
(+20 files in other folders)
