[package]
name = "pion-handoff-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
socketioxide = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
iced = { version = "0.14.0", features = ["tokio"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
tokio-rusqlite = "0.7.0"
reqwest = { version = "0.13.2", features = ["json"] }
sanitize-filename = "0.6.0"
lazy_static = "1.5.0"
regex = "1.12.3"
md5 = "0.8.0"
